--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,33 @@
   </head>
 
   <body>
-    <!-- 新規登録、ログイン時のメッセージ -->
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <div class="container">
+
+    <div class="container-fluid">
+      <% if user_signed_in? %>
+        <header>
+          <div class="header_contents">
+            <%= link_to "マイページ", user_path(current_user.id), class: "item" %>
+            <div class="item">記事一覧</div>
+            <div class="item">体重管理</div>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "item" %>
+          </div>
+        </header>
+      <% else %>
+        <header>
+            <div class="header_contents">
+              <%= link_to "新規登録", new_user_registration_path, class: "item" %>
+              <%= link_to "ログイン", new_user_session_path, class: "item" %>
+              <%= link_to "サイト紹介", home_about_path, class: "item" %>
+            </div>
+          </header>
+      <% end %>
+
+      <!-- 新規登録、ログイン時のメッセージ -->
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+
       <%= yield %>
     </div>
+
   </body>
 </html>
