--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,22 @@
 <table class="table">
-	<tr>
-		<th>プロフィール画像</th>
-		<th>名前</th>
-	</tr>
+	<thead>
+		<tr>
+			<th>プロフィール画像</th>
+			<th>名前</th>
+		</tr>
+	</thead>
 
 	<% @users.each do |user| %>
-	<tr>
-		<td>
-			<img src=<%= user.image %> class = "index_icon_image">
-		</td>
-		<td>
-			<%=link_to (user.name), user_path(user.id) %>
-		</td>
-	<tr>
+		<tbody>
+			<tr>
+				<td>
+					<img src=<%= user.image %> class = "index_icon_image">
+				</td>
+				<td>
+					<%=link_to (user.name), user_path(user.id) %>
+				</td>
+			</tr>
+		</tbody>
 	<% end %>
 
 </table>
