--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -8,5 +8,13 @@
 
 <% if @training.user.id == current_user.id %>
 	<%= link_to "編集", edit_training_path(@training.id) %>
-	<%= link_to "削除", training_path, method: :delete, data: {confirm: "削除しますか？"} %>
+	<%= link_to "削除", training_path(@training.id), method: :delete, data: {confirm: "削除しますか？"} %>
 <% end %>
+
+<div>
+	<h2>コメント</h2>
+	<div id="comments_area">
+		<%= render partial: "comments/index", locals: {comments: @comments} %>
+	</div>
+	<%= render partial: "comments/form", locals: {comment: @comment, training: @training} %>
+</div>
