--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,8 +9,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :image %><br/>
-    <%= f.file_field :image %>
+    <%= f.label :image_id %><br/>
+    <%= f.file_field :image_id %>
   </div>
 
   <div class="field">
