--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <p>ユーザ詳細</p>
-<img src=<%= @user.image %> class = "icon_image">
+<%=image_tag @user.image_id.url, class:"icon_image" %>
 <h2><%= @user.name %></h2>
 <p><%= simple_format @user.body %></p>
 
