--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,18 +1,22 @@
-<% @users.each do |user| %>
+<% if @users.count == 0 %>
+	<p>ユーザが見つかりませんでした</p>
+<% else %>
+	<% @users.each do |user| %>
 
-<table class="table">
-	<tr>
-		<td>
-			<img src=<%= user.image %> class = "index_icon_image">
-		</td>
-		<td>
-			<%= link_to user_path(user.id) do %>
-				<%= user.name %>
-			<% end %>
-		</td>
-		<td>フォロー数: <%= user.followings.count %></td>
-		<td>フォロワー数: <%= user.followers.count %></td>
-	</tr>
-</table>
+		<table class="table">
+			<tr>
+				<td>
+					<%= image_tag user.image_id.url, class: "index_icon_image" %>
+				</td>
+				<td>
+					<%= link_to user_path(user.id) do %>
+						<%= user.name %>
+					<% end %>
+				</td>
+				<td>フォロー数: <%= user.followings.count %></td>
+				<td>フォロワー数: <%= user.followers.count %></td>
+			</tr>
+		</table>
 
+	<% end %>
 <% end %>
