--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,8 @@
       <% end %>
 
       <!-- 新規登録、ログイン時のメッセージ -->
-      <p class="notice"><%= notice%></p>
-      <p class="alert"><%= alert %></p>
-
+      <!-- <p class="notice"><%= notice%></p>
+      <p class="alert"><%= alert %></p>-->
       <%= yield %>
     </div>
 
