--- a/app/views/trainings/edit.html.erb
+++ b/app/views/trainings/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>トレーニング編集</h1>
+<h1 class="training_head">トレーニング編集</h1>
 
 <%= form_for @training do |f| %>
 	<div class="row">
-		<div class="col-md-2 offset-md-3">名前</div>
+		<div class="col-md-2 offset-md-3">種目名</div>
 		<div class="col-md-4">
 			<%= f.text_field :name, class: "form-control" %>
 		</div>
