--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -1,36 +1,29 @@
-<h1>トレーニング一覧</h1>
+<h1 class="training_head">トレーニング一覧</h1>
 
-	<table class="table">
-		<thead>
-			<tr>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-			</tr>
-		</thead>
-
-		<% @trainings.each do |training| %>
-
-			<tbody>
-				<tr>
-					<td><%= image_tag training.user.image_id.url, class: "icon_training" %></td>
-					<td><%= link_to user_path(training.user) do %>
-							<%= training.user.name %>
-						<% end %>
-					</td>
-					<td>
-						<%= training.created_at.to_s(:datetime_jp) %>
-					</td>
-					<td>
-						<%= link_to training_path(training) do %>
-							<%= training.name %>
-						<% end %>
-					</td>
-				</tr>
-			</tbody>
-
-		<% end %>
-
-	</table>
-
+<div class="row">
+	<div class="offset-md-1"></div>
+	<div class="col-md-10">
+		<table class="table">
+			<% @trainings.each do |training| %>
+				<tbody>
+					<tr>
+						<td><%= image_tag training.user.image_id.url, class: "icon_training" %></td>
+						<td><%= link_to user_path(training.user) do %>
+								<%= training.user.name %>
+							<% end %>
+						</td>
+						<td>
+							<%= training.created_at.to_s(:datetime_jp) %>
+						</td>
+						<td>
+							<%= link_to training_path(training) do %>
+								<%= training.name %>
+							<% end %>
+						</td>
+					</tr>
+				</tbody>
+			<% end %>
+		</table>
+	</div>
+	<div class="offset-md-1"></div>
+</div>
