--- a/app/assets/stylesheets/trainings.scss
+++ b/app/assets/stylesheets/trainings.scss
@@ -9,6 +9,11 @@
 	objecct-fit: cover;
 }
 
-.training_head{
-	text-align: center;
+.bg_0{
+	background-color:  transparent;
+}
+
+#select_box{
+	background-color: transparent;
+	margin-bottom: 10px;
 }
