--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -1,19 +1,23 @@
-<h3><%= @user.name %>のフォロー中ユーザ</h3>
-<% if @user.followings.count == 0 %>
-	<p>ユーザはいません</p>
-<% else %>
-	<table class="table">
-		<% @user.followings.each do |following| %>
-			<tr>
-				<td><%= image_tag following.image_id.url, class: "index_icon_image" %></td>
-				<td>
-					<%= link_to user_path(following.id) do %>
-						<%= following.name %>
-					<% end %>
-				</td>
-				<td>フォロー数: <%= following.active_relationships.count %></td>
-				<td>フォロワー数: <%= following.passive_relationships.count %></td>
-			</tr>
-		<% end %>
-	</table>
-<% end %>
+<h3 class="head_content"><%= @user.name %>のフォロー中ユーザ</h3>
+<div class="row">
+	<% if @user.followings.count == 0 %>
+		<p class="text-center">ユーザはいません</p>
+	<% else %>
+		<div class="col-md-10 offset-md-1">
+			<table class="table">
+				<% @user.followings.each do |following| %>
+					<tr>
+						<td><%= image_tag following.image_id.url, class: "index_icon_image" %></td>
+						<td>
+							<%= link_to user_path(following.id) do %>
+								<%= following.name %>
+							<% end %>
+						</td>
+						<td>フォロー数: <%= following.active_relationships.count %></td>
+						<td>フォロワー数: <%= following.passive_relationships.count %></td>
+					</tr>
+				<% end %>
+			</table>
+		</div>
+	<% end %>
+</div>
