--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,18 +15,74 @@
  */
 @import "bootstrap";
 
-.header_contents{
+header{
 	display: flex;
-	justify-content: flex-end;
+	align-items: center;
+	background-color: rgba(0,0,0,0.9);
 	width: 100%;
-	background-color: blue;
 }
 
-.item{
-	margin: 10px;
+.container-fluid{
+	padding: 0;
+}
+
+li{
+	list-style-type: none;
+}
+
+.logo{
+    padding: 3px 20px;
+    color: white;
+    font-family: "游ゴシック", serif;
+    font-size: 1.7rem;
+}
+
+.logo:hover{
+	text-decoration: none;
+}
+
+.nav-link{
 	color: white;
 }
 
+nav{
+	margin-left: auto;
+
+}
+
+nav ul{
+	display: flex;
+	margin: auto 10px;
+}
+
 #search_form{
-	margin: auto 5px;
+	margin-top: 5px;
+}
+
+.icon_image{
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	object-fit: cover;
+	margin-bottom: 20px;
+}
+
+.comment_body{
+	height: auto;
+	border: solid 2px black;
+	border-radius: 3px;
+}
+
+.head_content{
+	text-align: center;
+	margin-bottom: 35px;
+	margin-top: 5%;
+}
+
+body{
+	background-image: image-url("bg.jpg");
+}
+
+.pagination {
+  justify-content: center;
 }
