--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,43 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#home{
+	background-image: image-url("db-min.jpg");
+	background-size: cover;
+	background-color: #000;
+	background-blend-mode: hard-light;
+	width: 100%;
+	height: 95vh;
+	position: absolute;
+	margin-top: -17px;
+}
+
+.home_box{
+	text-align: center;
+	width:100%;
+	position: relative;
+	top: 8%;
+}
+
+.CYT{
+	font-family: 'Cormorant Garamond', serif;
+	font-size: 5rem;
+}
+
+.home_comment{
+	text-align: center;
+	font-family: '游ゴシック', serif;
+}
+
+.about_img{
+	width:100%;
+	height: 100%;
+	padding: 0;
+}
+
+.about_text_head{
+	text-align: center;
+	margin-top: 20px;
+	font-family: "游ゴシック", serif;
+}
