--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -2,11 +2,13 @@
 	<table>
 		<tr>
 			<td><%= comment.user.name %></td>
-			<td><%= comment.content %></td>
-			<% if comment.user_id == current_user.id %>
-				<td>
-					<%= link_to "削除", training_comment_path(comment.training_id, comment.id), method: :delete, remote: true %>
-				</td>
+			<td class="comment_field"><%= comment.content %></td>
+			<% if user_signed_in? == true %>
+				<% if comment.user_id == current_user.id %>
+					<td>
+						<%= link_to "削除", training_comment_path(comment.training_id, comment.id), method: :delete, remote: true, class: "btn btn-danger btn-sm" %>
+					</td>
+				<% end %>
 			<% end %>
 		</tr>
 	</table>
