--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,56 @@
-<h2>Sign up</h2>
+<h2 class="head_content">サインアップ</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= render 'layouts/error_messages', model: f.object %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  <div class="row">
+    <div class="col-md-2 offset-md-3">名前</div>
+    <div class="col-md-4">
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+    </div>
+    <div class="offset-md-3"></div>
+  </div><br>
+
+  <div class="row">
+    <div class="col-md-2 offset-md-3">プロフィール画像</div>
+    <div class="col-md-4">
+      <%= f.file_field :image_id %>
+    </div>
+    <div class="offset-md-3"></div>
+  </div><br>
+
+  <div class="row">
+    <div class="col-md-2 offset-md-3">メールアドレス</div>
+    <div class="col-md-4">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+    </div>
+    <div class="offset-md-3"></div>
+  </div><br>
+
+  <div class="row">
+    <div class="col-md-2 offset-md-3">パスワード(6字以上)</div>
+    <div class="col-md-4">
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+    </div>
+    <div class="offset-md-3"></div>
+  </div><br>
+
+  <div class="row">
+    <div class="col-md-2 offset-md-3">パスワード(確認)</div>
+    <div class="col-md-4">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+    </div>
+    <div class="offset-md-3"></div>
+  </div><br>
+
+  <div class="row">
+    <div class="offset-md-5"></div>
+    <div class="col-md-4 text-right">
+      <%= f.submit "Sign up", class: "btn btn-primary" %>
+    </div>
+    <div class="offset-md-3"></div>
   </div>
 
-  <div class="field">
-    <%= f.label :image_id %><br/>
-    <%= f.file_field :image_id %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
 <% end %>
 
 
