--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,6 @@
-<h1>CYT</h1>
-
+<div id="home">
+	<div class="home_box">
+		<h1 class="CYT">CYT</h1>
+		<p class="home_comment">トレーニングの記録を投稿して仲間と切磋琢磨しよう</p>
+	</div>
+</div>
