--- a/app/views/trainings/new.html.erb
+++ b/app/views/trainings/new.html.erb
@@ -1,6 +1,7 @@
-<h1 class="training_head">トレーニング投稿</h1>
+<h1 class="head_content">トレーニング投稿</h1>
 
 <%= form_for @training do |f| %>
+	<%= render 'layouts/error_messages', model: f.object %>
 	<div class="row">
 		<div class="col-md-2 offset-md-3">種目名</div>
 		<div class="col-md-4">
@@ -35,7 +36,7 @@
 	<div class="row">
 		<div class="offset-md-5"></div>
 		<div class="col-md-4 text-right">
-			<%= f.submit "新規投稿", class: "btn btn-success" %>
+			<%= f.submit "新規投稿", class: "btn btn-primary" %>
 		</div>
 	</div>
 <% end %>
