--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,22 +1,26 @@
 <% if @users.count == 0 %>
-	<p>ユーザが見つかりませんでした</p>
+	<h2 class="head_content">ユーザが見つかりませんでした</h2>
 <% else %>
-	<% @users.each do |user| %>
 
-		<table class="table">
-			<tr>
-				<td>
-					<%= image_tag user.image_id.url, class: "index_icon_image" %>
-				</td>
-				<td>
-					<%= link_to user_path(user.id) do %>
-						<%= user.name %>
-					<% end %>
-				</td>
-				<td>フォロー数: <%= user.followings.count %></td>
-				<td>フォロワー数: <%= user.followers.count %></td>
-			</tr>
-		</table>
+	<h2 class="head_content"><%= @word %>検索結果: <%= @users.count %>人</h2>
+	<div class="col-md-10 offset-md-1">
+		<% @users.each do |user| %>
 
-	<% end %>
+			<table class="table">
+				<tr>
+					<td>
+						<%= image_tag user.image_id.url, class: "index_icon_image" %>
+					</td>
+					<td>
+						<%= link_to user_path(user.id) do %>
+							<%= user.name %>
+						<% end %>
+					</td>
+					<td>フォロー数: <%= user.followings.count %></td>
+					<td>フォロワー数: <%= user.followers.count %></td>
+				</tr>
+			</table>
+
+		<% end %>
+	</div>
 <% end %>
