--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -48,7 +48,7 @@
 				<% end %>
 
 				<div style="margin-top: 15px;">
-					<%= link_to "一覧に戻る", trainings_path, class: "btn btn-secondary"%>
+					<%= link_to "戻る", trainings_path, class: "btn btn-secondary"%>
 				</div>
 			</div>
 		</div>
