--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 		<% if user_signed_in? == true %>
 			<% if current_user.id == @user.id %>
 				<div class="text-center" style="margin-top: 5px;">
-					<%= link_to "Edit", edit_user_registration_path, class: "btn btn-success" %>
+					<%= link_to "ユーザ編集", edit_user_registration_path, class: "btn btn-success" %>
 				</div>
 			<% end %>
 
@@ -36,7 +36,7 @@
 			<% end %>
 		<% end %>
 		<div class="text-center" style="margin-top: 5px;">
-			<%= link_to "戻る", :back, class: "btn btn-secondary" %>
+			<%= link_to "一覧へ移動", trainings_path, class: "btn btn-secondary" %>
 		</div>
 	</div>
 	<div class="offset-md-4">
