--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class="head_content">サインアップ</h2>
+<h2 class="head_content">新規ユーザ登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render 'layouts/error_messages', model: f.object %>
