--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,6 +1,10 @@
 <div id="home">
 	<div class="home_box">
-		<h1 class="CYT">CYT</h1>
+		<h1 class="CYT">ContinueYourTraining</h1>
 		<p class="home_comment">トレーニングの記録を投稿して仲間と切磋琢磨しよう</p>
+		<div class="text-center">
+			<%= link_to "ログイン", new_user_session_path, class: "btn btn-dark" %>
+			<%= link_to "新規登録", new_user_registration_path, class: "btn btn-secondary" %>
+		</div>
 	</div>
 </div>
