--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
 	<div>
     <%= f.text_field :content, class: "form-control" %>
   	</div>
-  	<div style="margin-top: 10px">
+  	<div class="text-center"style="margin-top: 10px">
     	<%= f.submit "コメントをする", class: "btn btn-primary" %>
   	</div>
 <% end %>
