--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -3,7 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .comment_field{
-	border: solid 1px black;
+	border-bottom: solid 1px black;
 	width: 340px;
 	height: auto;
+}
+
+.comment_table tr td{
+	border: none;
 }
