--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,18 +1,25 @@
-<% comments.each do |comment| %>
+<div class="row">
 	<table class="table comment_table">
 		<tr>
-			<td style="border:none;"><%= comment.user.name %></td>
-			<td class="comment_field"><%= comment.content %></td>
-			<% if user_signed_in? == true %>
-				<% if comment.user_id == current_user.id %>
-					<td>
-						<%= link_to "削除", training_comment_path(comment.training_id, comment.id), method: :delete, remote: true, class: "btn btn-danger btn-sm" %>
-					</td>
-				<% else %>
-					<td></td>
-				<% end %>
-			<% end %>
+			<th></th>
+			<th></th>
+			<th></th>
 		</tr>
-	</table>
-<% end %>
 
+		<% comments.each do |comment| %>
+			<tr>
+				<td><%= comment.user.name %></td>
+				<td><%= comment.content %></td>
+				<% if user_signed_in? == true %>
+					<% if comment.user_id == current_user.id %>
+						<td>
+							<%= link_to "削除", training_comment_path(comment.training_id, comment.id), method: :delete, remote: true, class: "btn btn-danger btn-sm" %>
+						</td>
+					<% else %>
+						<td></td>
+					<% end %>
+				<% end %>
+			</tr>
+		<% end %>
+	</table>
+</div>
