--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -48,12 +48,15 @@
 				<div id="comments_area">
 					<%= render partial: "comments/index", locals: {comments: @comments} %>
 				</div><br>
-				<% if user_signed_in? == true %>
-					<%= render partial: "comments/form", locals: {comment: @comment, training: @training} %>
-				<% end %>
+			</div>
+		</div>
+
+		<% if user_signed_in? == true %>
+			<div class="col-md-4 offset-md-4">
+				<%= render partial: "comments/form", locals: {comment: @comment, training: @training} %>
+			</div>
+		<% end %>
 
 				<div class="text-center" style="margin-top: 15px;">
 					<%= link_to "一覧に戻る", trainings_path, class: "btn btn-secondary"%>
 				</div>
-			</div>
-		</div>
