--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,7 @@
 <div id="home">
+	<!-- 新規登録、ログイン、サインアウト時のメッセージ -->
+  <div class="text-center"><%= notice%></div>
+	
 	<div class="home_box">
 		<h1 class="CYT">ContinueYourTraining</h1>
 		<p class="home_comment">トレーニングの記録を投稿して仲間と切磋琢磨しよう</p>
