--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -39,7 +39,9 @@
 					</tbody>
 				<% end %>
 			</table>
-			<%= paginate @trainings %>
+			<div style="margin-bottom: 15px;">
+				<%= paginate @trainings %>
+			</div>
 		</div>
 		<div class="offset-md-1"></div>
 	</div>
