--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -57,7 +57,7 @@
 		</div>
 	<% end %>
 
-	<div class="text-center" style="margin-top: 15px;">
+	<div class="text-center" style="margin-bottom: 15px; margin-top: 10px">
 		<%= link_to "一覧に戻る", trainings_path, class: "btn btn-secondary"%>
 	</div>
 </div>
