--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -34,3 +34,12 @@
 	width: 250px;
 	text-align: center;
 }
+
+.move_index {
+	margin-top: 30px;
+}
+
+.table td {
+	line-height: 50px;
+	text-align: center;
+}
