--- a/app/assets/stylesheets/weights.scss
+++ b/app/assets/stylesheets/weights.scss
@@ -41,3 +41,15 @@
   margin-top: 30px;
   margin-bottom: 15px;
 }
+
+.record {
+  margin-top: 10px;
+}
+
+.back-btn {
+  margin-top: 15px;
+}
+
+label {
+  margin-bottom: 0;
+}
