--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -21,7 +21,7 @@
 
     <%= f.hidden_field :user_id, :value => current_user.id %>
   <% end %>
-<div>
+</div>
 
 <% if @weight_data.present? %>
   <div>
