--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -36,7 +36,7 @@
     </table>
   </div>
 <% else %>
-  <div class="back-btn"><%= link_to "戻る", weights_path, class: "btn btn-secondary" %></div>
+  <div class="back-btn text-center"><%= link_to "戻る", weights_path, class: "btn btn-secondary" %></div>
 <% end %>
 
 <% if @weight_data.present? %>
