--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -35,8 +35,6 @@
       <% end %>
     </table>
   </div>
-<% else %>
-  <div class="back-btn text-center"><%= link_to "戻る", weights_path, class: "btn btn-secondary" %></div>
 <% end %>
 
 <% if @weight_data.present? %>
@@ -44,7 +42,7 @@
 <% end %>
 
 <script>
-  "use strict"
+  "use strict";
 
   {
 
