--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -24,7 +24,7 @@
 </div>
 
 <% if @weight_data.present? %>
-  <div>
+  <div class="weight-table">
     <table class="table">
       <% @weights.each do |record| %>
         <tr>
